1. Fix the bug that the editing of existing sites cannot be saved. 2. Add detailed instructions for asking users the computer password. 3. Remove the hint that the port number of apache must be unique when adding editing sites, there is no limit at present. 4. if Homebrew and Macports are not found in the version management page, users will be prompted. 5. the first time a user adds a site, Caddy/Nginx/Apache and PHP services will be automatically enabled. 6. The link icon will turn green when the site is accessible. 7. Fix the line breaks in the popup prompts to make them more readable.

--- a/src/render/style/index.scss
+++ b/src/render/style/index.scss
@@ -130,11 +130,19 @@ body {
   max-width: 70vw;
   max-height: 70vh;
   overflow: auto;
+  align-items: start;
+
+  .el-message__icon {
+    align-self: center;
+  }
 
   .el-message__content {
+    height: 100%;
     word-wrap: break-word;
     white-space: pre-wrap;
     user-select: text;
+    word-break: break-word;
+    overflow: auto;
   }
 }
 .dns-panel {
@@ -2596,6 +2604,7 @@ body {
   user-select: text;
   font-size: 16px;
   padding-bottom: 80px;
+  line-height: 40px;
 
   a {
     text-decoration: none;
