--- a/src/render/style/light.scss
+++ b/src/render/style/light.scss
@@ -450,6 +450,12 @@ html.light {
       }
     }
   }
+
+  .app-el-message {
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--base-bg-color-1);
+    }
+  }
 }
 
 @media (max-width: 1100px) {
